# aave-liquidation

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
abis/: Liquidator.json
abis/aave_v3/: UIPoolDataProviderV3.json
abis/chainlink/: CLRatePriceCapAdapter.json  CLSynchronicityPriceAdapterPegToBase.json  PriceCapAdapterStable.json
contracts/: .gitignore  foundry.toml
contracts/src/: Liquidator.sol
migrations/: 20240101010101_create_tables.sql  20240101010102_insert_val.sql  20240101010103_change_symbol_length.sql
src/: args.rs  configs.rs  consts.rs  contracts.rs  main.rs  run.rs  utils.rs
src/actors/: database.rs  executor.rs  fanatic.rs  follower.rs  mod.rs
src/actors/messages/: database.rs  executor.rs  fanatic.rs  follower.rs  mod.rs
