[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
alloy = { version = "0.11", features = [
    "full",
    "provider-ws",
    "providers",
    "rpc",
    "provider-anvil-node",
    "sol-types",
] }
alloy-contract = "0.11.0"
alloy-sol-types = "0.8.20"
clap = { version = "4.5.27", features = ["derive", "env", "color", "std"] }
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "time",
    "bigdecimal",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
